# WhiteSpace

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  conan.cmake  conanfile.txt
include/: arithmetic.hpp  core.fwd.hpp  core.hpp  env.hpp  flow_control.hpp  heap_access.hpp  io_ops.hpp  program_state.hpp  stack_manip.hpp  utils.hpp  whitespace.hpp
src/: ProgramState.cpp  arithmeric.cpp  env.cpp  flow_control.cpp  heap_access.cpp  io_ops.cpp  main.cpp  program_state.cpp  stack_manip.cpp  utils.cpp  whitespace.cpp
test/: CMakeLists.txt  arithmetic.test.cpp  flow_control.test.cpp  heap_access.test.cpp  io_ops.test.cpp  stack_manip.test.cpp  whitespace.test.cpp
